scripts/simple_cluster_config/apps/cert-manager/tutorials/acme/example/whoami_deployment.yaml
apiVersion: apps/v1  
kind: Deployment 
metadata: 
  name: whoami
spec: 
  replicas: 2 
  selector: 
    matchLabels: 
      app: whoami 
  template: 
    metadata: 
      labels: 
        app: whoami 
    spec: 
      containers: 
          - name: whoamicontainer
            image: containous/whoami
