scripts/simple_cluster_config/apps/cert-manager/tutorials/acme/example/whoami_service.yaml
apiVersion: v1
kind: Service 
metadata: 
  name: whoami
spec: 
  ports: 
  - name: http 
    targetPort: 80 
    port: 80 
  selector: 
    app: whoami
